fix the menu icon being misaligned

--- a/source/stylesheets/_header.sass
+++ b/source/stylesheets/_header.sass
@@ -76,7 +76,7 @@ nav
     content: '\f10a'
     font-family: $icons
     font-size: 2em
-    padding: 0.5em
+    padding: 0.24em 0.5em
     position: absolute
     right: 0
   &:checked
